--- a/data/codecomment-plugin.desktop.in
+++ b/data/codecomment-plugin.desktop.in
@@ -2,6 +2,7 @@
 Module=codecomment
 IAge=2
 Name=codecomment
+Version=v0.1.0
 Description=Xed porting of the Gedit codecomment plugin
 Comment=Xed porting of the Gedit codecomment plugin
 Authors=Nicola "tudo75" Tudino
